Fix currency prefix wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
   font-weight: 300;
   font-size: 14px;
   color: #000;
+  white-space: nowrap;
 }
 
 .sfua-donate-form__input-box .sfua-donate-form__input-box__large {
